wal-macros/tests/rsx_macro_tests/custom_components/custom_component_without_props_without_default_fail.rs
use wal::{
    component::{behavior::Behavior, Component},
    virtual_dom::VNode,
};
use wal_macros::rsx;

include!("../utils/custom_components/custom_component_props_struct_without_default.rs");

fn main() {
    rsx! { <CustomComponentPropsStructWithoutDefault /> };
    rsx! { <CustomComponentPropsStructWithoutDefault key="key" />};
}
